--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-in-viewport": "^1.0.0-alpha.29",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
